@@ -13,6 +13,7 @@
 - compat-27: Add ~make-decoded-time~.
 - compat-27: Add ~minibuffer-history-value~.
 - compat-27: Add ~ring-resize~.
+- compat-27: Add ~file-size-human-readable-iec~.
 - compat-28: Add ~color-dark-p~.
 - compat-28: Add ~directory-files-and-attributes~ with COUNT argument.
 - compat-28: Add ~text-quoting-style~.
